@@ -21,6 +21,7 @@ XX/XX/25
 * Fixed incorrect option handling in denoise (#1599)
 * Fixed poor star detection when input sequence was in 16b and preferences set in 32b (#1614)
 * Fixed incorrect image size with latest cameras added to LibRaw, Siril now uses 202502 snapshot (#1565)
+* Fixed metadata filling problem in PixelMath using $T (#1605)
 
 **Improvements:**
 * Scripts can be opened in the editor directly from the Script Preferences treeview (#1556, !860)
